examples/datalog/09_recursion/70_acyclic_path.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_acyclic_path
Knowledge graph 'test_acyclic_path' created.
Switched to knowledge graph: test_acyclic_path
> .kg use test_acyclic_path
Switched to knowledge graph: test_acyclic_path
> +edge[(1, 2), (2, 3), (3, 4), (2, 4), (4, 1)].
Inserted 5 fact(s) into 'edge'.
> +acyclic_path(X, Y, 1) :- edge(X, Y).
Rule 'acyclic_path' registered.
> +acyclic_path(X, Z, D2) :- acyclic_path(X, Y, D), edge(Y, Z), D2 = D + 1, D < 4.
Script error: Failed to register rule: Unsafe rule 'acyclic_path': Head variable(s) D2 not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
