examples/datalog/09_recursion/70_acyclic_path.dl
% Test: Acyclic path detection
% Expected: Find paths that don't revisit nodes
% Category: 09_recursion
% Priority: P2 - Recursion patterns

.kg create test_acyclic_path
.kg use test_acyclic_path

+edge[(1, 2), (2, 3), (3, 4), (2, 4), (4, 1)].

% Direct edges as acyclic paths
+acyclic_path(X, Y, 1) :- edge(X, Y).

% Extended paths (simplified - just depth tracking)
+acyclic_path(X, Z, D2) :- acyclic_path(X, Y, D), edge(Y, Z), D2 = D + 1, D < 4.

?- acyclic_path(X, Y, D).

.kg use default
.kg drop test_acyclic_path
